agentgateway-inference-jev-routing-eks/yaml/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jev-routing-kb
  labels:
    app.kubernetes.io/part-of: jev-routing-kb
